# ladruno_gmsh

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  gmsh_capabilities.md
examples/: 00_smoke_pipeline.py  01_open_step.py  02_clean_revit.py  03_boolean_compose.py  04_mesh_and_quality.py  05_reorient_normals.py  06_reclassify_stl.py  07_launch_viewer.py
src/ladruno_gmsh/: __init__.py  api.py
src/ladruno_gmsh/bridge/: __init__.py  mesh_adapter.py  picker.py  snapshot.py  tessellator.py
src/ladruno_gmsh/diagnostics/: __init__.py  duplicates.py  interference.py  manifoldness.py  normals.py  orphans.py  quality.py  report.py
src/ladruno_gmsh/io/: __init__.py  project.py
src/ladruno_gmsh/kernel/: __init__.py  boolean.py  connectivity.py  errors.py  geometry.py  healing.py  io.py  mesh.py  physical_groups.py  quality.py  reclassify.py  reorient.py  session.py
src/ladruno_gmsh/model/: __init__.py  document.py  entity.py  history.py  mesh_snapshot.py  tolerances.py  units.py
src/ladruno_gmsh/operations/: __init__.py  _helpers.py  base.py  booleans.py  exports.py  geometry.py  healing.py  imports.py  mesh.py  physical_groups.py  reclassify.py  reorient.py
src/ladruno_gmsh/utils/: __init__.py  logging.py  numeric.py
src/ladruno_gmsh/viewer/: __init__.py  deps.py  interaction.py  multiview.py  overlays.py  scene.py  session.py  state.py  status.py  theme.py  toolbars.py  window.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_selection.py  test_viewer.py
tests/unit/: test_open_step.py
(+16 files in other folders)
