[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ladruno_gmsh"
version = "0.0.1"
description = "Geometry and mesh broker over gmsh, with an interactive PyVista/Qt viewer aimed at FEM."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patricio Palacios B."}
]
requires-python = ">=3.10"
dependencies = [
    "gmsh>=4.12",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
viewer = [
    "pyvista>=0.43",
    "vtk>=9.2",
    "pyvistaqt>=0.11",
    "qtpy>=2.4",
    "PyQt5>=5.15",
]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]

[project.scripts]
ladruno-gmsh = "ladruno_gmsh.api:_cli_main"

[project.urls]
Repository = "https://github.com/ppalacios92/ladruno_gmsh"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
